[gd_scene load_steps=14 format=3 uid="uid://ybv6avhh5gpg"]

[ext_resource type="Texture2D" uid="uid://bg6m2m1hvw2hf" path="res://ui/images/background.png" id="1_iujm7"]
[ext_resource type="Script" path="res://ui/menus/main_menu.gd" id="1_wyi7e"]
[ext_resource type="Texture2D" uid="uid://wa8raoioc6sg" path="res://ui/images/new_game.png" id="2_42wdb"]
[ext_resource type="Texture2D" uid="uid://cp8vbtbqmd76u" path="res://ui/images/new_game_hover.png" id="3_godfy"]
[ext_resource type="Texture2D" uid="uid://cyt5u4wlfqlb5" path="res://ui/images/separator.png" id="4_07nmb"]
[ext_resource type="PackedScene" uid="uid://55x8s8tr5ke5" path="res://ui/components/ai_button.tscn" id="4_kbhah"]
[ext_resource type="Texture2D" uid="uid://c8grxqg0ypqva" path="res://ui/images/highscore.png" id="5_sas4v"]
[ext_resource type="Texture2D" uid="uid://7r2kjnpar1hn" path="res://ui/images/highscore_hover.png" id="6_pb3qc"]
[ext_resource type="Texture2D" uid="uid://djdjcgpxwehtb" path="res://ui/images/credits.png" id="7_6566i"]
[ext_resource type="Texture2D" uid="uid://bpyw4hdgiyuhr" path="res://ui/images/credits_hover.png" id="8_njpln"]
[ext_resource type="Texture2D" uid="uid://b33r3bap7ur20" path="res://ui/images/quit.png" id="9_e3885"]
[ext_resource type="Texture2D" uid="uid://dq0l3mtockw75" path="res://ui/images/quit_hover.png" id="10_p4flp"]
[ext_resource type="AudioStream" uid="uid://brk4ts1b0q1bu" path="res://ui/audio/menu_music.ogg" id="12_b73mu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wyi7e")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_b73mu")
volume_db = -5.0
autoplay = true

[node name="VFlowContainer" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="Background" type="TextureRect" parent="VFlowContainer"]
layout_mode = 2
texture = ExtResource("1_iujm7")
stretch_mode = 4

[node name="BottomRow" type="HBoxContainer" parent="VFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Separator" type="TextureRect" parent="VFlowContainer/BottomRow"]
layout_mode = 2
texture = ExtResource("4_07nmb")
stretch_mode = 4

[node name="MenuButtons" type="VFlowContainer" parent="VFlowContainer/BottomRow"]
layout_mode = 2
theme_override_constants/h_separation = 0

[node name="NewGameButton" parent="VFlowContainer/BottomRow/MenuButtons" instance=ExtResource("4_kbhah")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../HighScoreButton")
focus_next = NodePath("../HighScoreButton")
focus_previous = NodePath("../QuitButton")
texture_normal = ExtResource("2_42wdb")
texture_hover = ExtResource("3_godfy")
stretch_mode = 4

[node name="HighScoreButton" parent="VFlowContainer/BottomRow/MenuButtons" instance=ExtResource("4_kbhah")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../NewGameButton")
focus_neighbor_right = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../NewGameButton")
texture_normal = ExtResource("5_sas4v")
texture_hover = ExtResource("6_pb3qc")
stretch_mode = 4

[node name="CreditsButton" parent="VFlowContainer/BottomRow/MenuButtons" instance=ExtResource("4_kbhah")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../HighScoreButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../HighScoreButton")
texture_normal = ExtResource("7_6566i")
texture_hover = ExtResource("8_njpln")
stretch_mode = 4

[node name="QuitButton" parent="VFlowContainer/BottomRow/MenuButtons" instance=ExtResource("4_kbhah")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../CreditsButton")
focus_neighbor_right = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../CreditsButton")
texture_normal = ExtResource("9_e3885")
texture_hover = ExtResource("10_p4flp")
stretch_mode = 4

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VFlowContainer/BottomRow/MenuButtons/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VFlowContainer/BottomRow/MenuButtons/HighScoreButton" to="." method="_on_high_score_button_pressed"]
[connection signal="pressed" from="VFlowContainer/BottomRow/MenuButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VFlowContainer/BottomRow/MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
